# payments-engine-example

./: .travis.yml  Cargo.toml  README.md  crates.js  index.html  notes.txt  search-index.js  settings.html  source-files.js
data/: .gitignore  million.csv  ten-million.csv  ten-thousand.csv  thousand.csv
payments_engine_example/: all.html  fn.configure_deserialize_workers.html  fn.process_transactions.html  fn.write_balances.html  index.html  sidebar-items.js
payments_engine_example/currency/: type.CurrencyFloat.html
payments_engine_example/rand/: fn.generate_random_valid_transaction_sequence.html  index.html  sidebar-items.js
payments_engine_example/state/: index.html  sidebar-items.js  struct.AccountsState.html  struct.DisputesState.html  struct.State.html  struct.TransactionsState.html
payments_engine_example/test_utils/: fn.run_test_scenario.html  index.html  sidebar-items.js
payments_engine_example/types/: enum.TransactionContainer.html  enum.TransactionError.html  enum.TransactionType.html  index.html  sidebar-items.js  struct.Account.html  struct.Chargeback.html  struct.Deposit.html  struct.Dispute.html  struct.OutputRecord.html  struct.Resolve.html  struct.TransactionRecord.html  struct.Withdrawal.html  type.ClientId.html  type.CurrencyFloat.html  (+1 more)
rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
src/: account.rs  balances.rs  conversions.rs  currency.rs  handlers.rs  lib.rs  main.rs  output.rs  rand.rs  record.rs  state.rs  test_utils.rs  traits.rs  types.rs  validate.rs
tests/: from_testdata.rs  inline_data.rs
(+639 files in other folders)
