[package]
name = "payments-engine-example"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
edition = "2018"
default-run = "payments-engine-example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0", features=["derive"]}
log = "0.4"
env_logger = "0.9"
csv = "1.1"
structopt = "0.3"
rand = "0.8"
rayon = "1.5"
num_cpus = "1.13"